--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,154 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
+<html class="page" lang="ru">
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS. Адаптивная вёрстка и автоматизация</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+</head>
 
-  </body>
+<body class="page_body">
+  <header class="main-header">
+
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item site-list__item--current">
+            <a>
+              Главная
+            </a>
+          </li>
+          <li class="site-list__item">
+            <a href="photo.html">
+              Фото и видео
+            </a>
+          </li>
+          <a class="main-header__logo">
+            <img class="main-header__logo-image" src="../images/logo.png" width="185" height="96" alt="Логотип Седона">
+          </a>
+          <li class="site-list__item">
+            <a href="form.html">
+              Форма отзыва
+            </a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">
+              HTML ACADEMY
+            </a>
+          </li>
+        </ul>
+        <ul class="main-nav__list user-list">
+
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+  <main class="main-container">
+    <h1 class="visually-hidden">Седона </h1>
+    <section class="description">
+      <div class="description__wrapper">
+        <header class="description__header">
+          <h2 class="sedona">
+            СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!
+          </h2>
+          <p class="causes__slogan">
+            Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
+          </p>
+        </header>
+        <dl class="benefits__list">
+          <div class="benefits__item">
+            <dt class="benefits__number">
+              НАСТОЯЩИЙ ГОРОДОК
+            </dt>
+            <dd class="benefits__description">
+              СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ
+            </dd>
+            <dt class="benefits__number">
+              ТАМ ЕСТЬ Мост дьявола
+            </dt>
+            <dd class="benefits__description">
+              Да, по нему можно пройти! Если вы осмелитесь, конечно
+            </dd>
+            <dt class="benefits__number">
+              НЕБОЛЬШАЯ ПЛОЩАДЬ
+            </dt>
+            <dd class="benefits__description">
+              ВСЕ интересные места находятся очень близкоЬ
+            </dd>
+            <dt class="benefits__number">
+              КРАСИВАЯ ДОРОГА
+            </dt>
+            <dd class="benefits__description">
+              ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА совсем НЕ СКУЧНО!
+            </dd>
+            <dt class="benefits__number">
+              МАЛО ТУРИСТОВ
+            </dt>
+            <dd class="benefits__description">
+              Большинство едет в гранд каньон и толпится там
+            </dd>
+          </div>
+        </dl>
+      </div>
+    </section>
+    <section class="advantages">
+      <div class="advantages__wrapper">
+        <h2 class="visually-hidden">Наши преимущества</h2>
+        <ul class="advantages__list">
+          <li class="advantages__item advantages__item--housing">
+            <h3 class="advantages__title">Жилье</h3>
+            <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+          </li>
+          <li class="advantages__item advantages__item--food">
+            <h3 class="advantages__title">ЕДА</h3>
+            <p class="advantages__description">Всегда заказывайте ФИРМЕННЫЙ БУРГЕР,Вы НЕ разочаруетесь!</p>
+          </li>
+          <li class="advantages__item advantages__item--souvenirs">
+            <h3 class="advantages__title">СУВЕНИРЫ</h3>
+            <p class="advantages__description">Не только китайского, но и местного производства!</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="information">
+        <h2 class="visually-hidden">
+          ЗАИНТЕРЕСОВАЛИСЬ?
+        </h2>
+        <p class="causes__slogan">
+          Укажите предполагаемые датыпоездки, и мы покажем вам лучшиепредложения гостиниц в седоне
+        </p>
+        <button class="button button_search"> Найти гостиницу </button>
+      </div>
+    </section>
+
+  </main>
+  <footer class="main-footer">
+    <div class="main-footer__wrapper">
+      <div class="main-footer__contacts contacts">
+        <b class="contacts__title">#visitSEDONA</b>
+      </div>
+      <div class="main-footer__social social">
+        <b class="social__title">Давайте дружить!</b>
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">Мы в Телеграме</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">Мы в Ютубе</a>
+          </li>
+        </ul>
+      </div>
+      <div class="main-footer__copyright copyright">
+        <b class="copyright__text">Разработано:</b>
+        <a class="copyright__link visually-hidden" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+      </div>
+    </div>
+  </footer>
+</body>
+
 </html>
