--- a/source/index.html
+++ b/source/index.html
@@ -38,7 +38,7 @@
             </a>
           </li>
         </ul>
-        <ul class="main-nav__list user-list">
+
 
         </ul>
       </div>
@@ -60,31 +60,31 @@
         <dl class="benefits__list">
           <div class="benefits__item">
             <dt class="benefits__number">
-              НАСТОЯЩИЙ ГОРОДОК
+              настоящий городок
             </dt>
             <dd class="benefits__description">
-              СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ
+              седона не атракцион для туристов, там течет своя жизнь
             </dd>
             <dt class="benefits__number">
-              ТАМ ЕСТЬ Мост дьявола
+              там есть мост дьявола
             </dt>
             <dd class="benefits__description">
               Да, по нему можно пройти! Если вы осмелитесь, конечно
             </dd>
             <dt class="benefits__number">
-              НЕБОЛЬШАЯ ПЛОЩАДЬ
+              небольшая площадь
             </dt>
             <dd class="benefits__description">
-              ВСЕ интересные места находятся очень близкоЬ
+              все интересные места находятся очень близкоЬ
             </dd>
             <dt class="benefits__number">
-              КРАСИВАЯ ДОРОГА
+              красивая дорога
             </dt>
             <dd class="benefits__description">
-              ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА совсем НЕ СКУЧНО!
+              ехать в седону из Лас-вегаса совсем не скучно!
             </dd>
             <dt class="benefits__number">
-              МАЛО ТУРИСТОВ
+              мало туристов
             </dt>
             <dd class="benefits__description">
               Большинство едет в гранд каньон и толпится там
@@ -114,7 +114,7 @@
     </section>
     <section class="information">
         <h2 class="visually-hidden">
-          ЗАИНТЕРЕСОВАЛИСЬ?
+          заинтересовались?
         </h2>
         <p class="causes__slogan">
           Укажите предполагаемые датыпоездки, и мы покажем вам лучшиепредложения гостиниц в седоне
