--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@
   <title>HTML Academy: Седона</title>
 </head>
 
-<body class="page_body">
+<body class="page__body">
   <header class="main-header">
 
     <nav class="main-nav">
