--- a/source/index.html
+++ b/source/index.html
@@ -55,72 +55,70 @@
             Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
           </p>
         </header>
-        <dl class="benefits__list">
-          <div class="benefits__item">
+        <ol class="benefits__list">
+          <li class="benefits__item">
             <dt class="benefits__number">
               настоящий городок
             </dt>
             <dd class="benefits__description">
               седона не атракцион для туристов, там течет своя жизнь
             </dd>
-          </div>
-          <div class="benefits__item">
+            <img src="../images/photo-city.jpg" width="512" height="256" alt="Фотография седоны">
+            <ul class="advantages__list">
+              <li class="advantages__item advantages__item--housing">
+                <img src="../images/icon-house.svg" width="72" height="72" alt="Иконка дома">
+                <h3 class="advantages__title">Жилье</h3>
+                <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+              </li>
+              <li class="advantages__item advantages__item--food">
+                <img src="../images/icon-burger.svg" width="72" height="72" alt="Иконка бургера">
+                <h3 class="advantages__title">ЕДА</h3>
+                <p class="advantages__description">Всегда заказывайте фирменный бургер,вы не разочаруетесь!</p>
+              </li>
+              <li class="advantages__item advantages__item--souvenirs">
+                <img src="../images/icon-gift.svg" width="72" height="72" alt="Иконка сувенира">
+                <h3 class="advantages__title">СУВЕНИРЫ</h3>
+                <p class="advantages__description">Не только китайского, но и местного производства!</p>
+              </li>
+            </ul>
+          </li>
+          <li class="benefits__item">
             <dt class="benefits__number">
               там есть мост дьявола
             </dt>
             <dd class="benefits__description">
               Да, по нему можно пройти! Если вы осмелитесь, конечно
             </dd>
-          </div>
-          <div class="benefits__item">
+            <img src="../images/photo-bridge.jpg" width="512" height="256" alt="Фотография моста">
+          </li>
+          <li class="benefits__item">
             <dt class="benefits__number">
               небольшая площадь
             </dt>
             <dd class="benefits__description">
               все интересные места находятся очень близкоЬ
             </dd>
-          </div>
-          <div class="benefits__item">
+          </li>
+          <li class="benefits__item">
             <dt class="benefits__number">
               красивая дорога
             </dt>
             <dd class="benefits__description">
               ехать в седону из Лас-вегаса совсем не скучно!
             </dd>
-          </div>
-          <div class="benefits__item">
+          </li>
+          <li class="benefits__item">
             <dt class="benefits__number">
               мало туристов
             </dt>
             <dd class="benefits__description">
               Большинство едет в гранд каньон и толпится там
             </dd>
-          </div>
-        </dl>
+          </li>
+        </ol>
       </div>
     </section>
-    <section class="advantages">
-      <div class="advantages__wrapper">
-        <h2 class="visually-hidden">Наши преимущества</h2>
-        <ul class="advantages__list">
-          <li class="advantages__item advantages__item--housing">
-            <img src="../images/icon-house.svg" width="72" height="72" alt="Иконка дома">
-            <h3 class="advantages__title">Жилье</h3>
-            <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-          </li>
-          <li class="advantages__item advantages__item--food">
-            <img src="../images/icon-burger.svg" width="72" height="72" alt="Иконка бургера">
-            <h3 class="advantages__title">ЕДА</h3>
-            <p class="advantages__description">Всегда заказывайте фирменный бургер,вы не разочаруетесь!</p>
-          </li>
-          <li class="advantages__item advantages__item--souvenirs">
-            <img src="../images/icon-gift.svg" width="72" height="72" alt="Иконка сувенира">
-            <h3 class="advantages__title">СУВЕНИРЫ</h3>
-            <p class="advantages__description">Не только китайского, но и местного производства!</p>
-          </li>
-        </ul>
-      </div>
-    </section>
+    >
     <section class="information">
       <h2 class="visually-hidden">
         заинтересовались?
