исправил все ошибки

--- a/source/index.html
+++ b/source/index.html
@@ -51,69 +51,71 @@
           <h2 class="sedona">
             СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!
           </h2>
-          <p class="causes__slogan">
+          <p class="slogan">
             Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
           </p>
         </header>
-        <ol class="benefits__list">
+        <ol class="benefits">
           <li class="benefits__item">
-            <dt class="benefits__number">
+            <h3 class="benefits__number">
               настоящий городок
-            </dt>
-            <dd class="benefits__description">
+            </h3>
+            <p class="benefits__description">
               седона не атракцион для туристов, там течет своя жизнь
-            </dd>
+            </p>
             <img src="../images/photo-city.jpg" width="512" height="256" alt="Фотография седоны">
-            <ul class="advantages__list">
-              <li class="advantages__item advantages__item--housing">
-                <img src="../images/icon-house.svg" width="72" height="72" alt="Иконка дома">
-                <h3 class="advantages__title">Жилье</h3>
-                <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-              </li>
-              <li class="advantages__item advantages__item--food">
-                <img src="../images/icon-burger.svg" width="72" height="72" alt="Иконка бургера">
-                <h3 class="advantages__title">ЕДА</h3>
-                <p class="advantages__description">Всегда заказывайте фирменный бургер,вы не разочаруетесь!</p>
-              </li>
-              <li class="advantages__item advantages__item--souvenirs">
-                <img src="../images/icon-gift.svg" width="72" height="72" alt="Иконка сувенира">
-                <h3 class="advantages__title">СУВЕНИРЫ</h3>
-                <p class="advantages__description">Не только китайского, но и местного производства!</p>
-              </li>
-            </ul>
+            <div class="advantages">
+              <ul class="advantages__list">
+                <li class="advantages__item advantages__item--housing">
+                  <img src="../images/icon-house.svg" width="72" height="72" alt="Иконка дома">
+                  <h3 class="advantages__title">Жилье</h3>
+                  <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+                </li>
+                <li class="advantages__item advantages__item--food">
+                  <img src="../images/icon-burger.svg" width="72" height="72" alt="Иконка бургера">
+                  <h3 class="advantages__title">ЕДА</h3>
+                  <p class="advantages__description">Всегда заказывайте фирменный бургер,вы не разочаруетесь!</p>
+                </li>
+                <li class="advantages__item advantages__item--souvenirs">
+                  <img src="../images/icon-gift.svg" width="72" height="72" alt="Иконка сувенира">
+                  <h3 class="advantages__title">СУВЕНИРЫ</h3>
+                  <p class="advantages__description">Не только китайского, но и местного производства!</p>
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="benefits__item">
-            <dt class="benefits__number">
+            <h3 class="benefits__number">
               там есть мост дьявола
-            </dt>
-            <dd class="benefits__description">
+            </h3>
+            <p class="benefits__description">
               Да, по нему можно пройти! Если вы осмелитесь, конечно
-            </dd>
+            </p>
             <img src="../images/photo-bridge.jpg" width="512" height="256" alt="Фотография моста">
           </li>
           <li class="benefits__item">
-            <dt class="benefits__number">
+            <h3 class="benefits__number">
               небольшая площадь
-            </dt>
-            <dd class="benefits__description">
+            </h3>
+            <p class="benefits__description">
               все интересные места находятся очень близкоЬ
-            </dd>
+            </p>
           </li>
           <li class="benefits__item">
-            <dt class="benefits__number">
+            <h3 class="benefits__number">
               красивая дорога
-            </dt>
-            <dd class="benefits__description">
+            </h3>
+            <p class="benefits__description">
               ехать в седону из Лас-вегаса совсем не скучно!
-            </dd>
+            </p>
           </li>
           <li class="benefits__item">
-            <dt class="benefits__number">
+            <h3 class="benefits__number">
               мало туристов
-            </dt>
-            <dd class="benefits__description">
+            </h3>
+            <p class="benefits__description">
               Большинство едет в гранд каньон и толпится там
-            </dd>
+            </p>
           </li>
         </ol>
       </div>
@@ -123,7 +125,7 @@
       <h2 class="visually-hidden">
         заинтересовались?
       </h2>
-      <p class="causes__slogan">
+      <p class="slogan">
         Укажите предполагаемые датыпоездки, и мы покажем вам лучшиепредложения гостиниц в седоне
       </p>
       <button class="button button_search"> Найти гостиницу </button>
