--- a/source/form.html
+++ b/source/form.html
@@ -91,11 +91,11 @@
       <h3>посещенные достопримечательности:</h3>
       <div class="attraction">
         <ol class="attraction__item">
-          <li class="attraction__list"><input name="impression" type="checkbox" value="bridge" checked>Мост Дьявола</li>
-          <li class="attraction__list"><input name="impression" type="checkbox" value="park" checked>Слайд-парк</li>
-          <li class="attraction__list"><input name="impression" type="checkbox" value="mountain" checked>Гора-Колокол
+          <li class="attraction__list"><input name="attraction" type="checkbox" value="bridge" checked>Мост Дьявола</li>
+          <li class="attraction__list"><input name="attraction" type="checkbox" value="park" checked>Слайд-парк</li>
+          <li class="attraction__list"><input name="attraction" type="checkbox" value="mountain" checked>Гора-Колокол
           </li>
-          <li class="attraction__list"><input name="impression" type="checkbox" value="rocks">Красные скалы</li>
+          <li class="attraction__list"><input name="attraction" type="checkbox" value="rocks">Красные скалы</li>
         </ol>
       </div>
     </section>
