--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,48 +1,8 @@
-<!DOCTYPE html>
-<html class="page" lang="ru">
+{% set pageId = 1 %}
+{% set permalink = pages[pageId].path %}
+{% extends "./templates/_layout.twig" %}
 
-<head>
-  <meta charset="utf-8">
-  <title>HTML Academy: Седона</title>
-</head>
-
-<body class="page__body">
-  <header class="main-header">
-
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-
-      <div class="main-nav__wrapper">
-        <a class="main-header__logo">
-          <img class="main-header__logo-image" src="../images/logo.png" width="185" height="96" alt="Логотип Седона">
-        </a>
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item site-list__item--current">
-            <a>
-              Главная
-            </a>
-          </li>
-          <li class="site-list__item">
-            <a href="photo.html">
-              Фото и видео
-            </a>
-          </li>
-
-          <li class="site-list__item">
-            <a href="form.html">
-              Форма отзыва
-            </a>
-          </li>
-          <li class="site-list__item">
-            <a href="#">
-              HTML ACADEMY
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-
+{% block main %}
   <main class="main-container">
     <h1 class="visually-hidden">фото и видео</h1>
     <section class="description">
@@ -59,48 +19,28 @@
       <h2 class="photo">фото</h2>
       <div class="catalog__wrapper">
         <ul class="catalog__list">
-          <li class="catalog__item catalog__item--spaces">
-            <img src="../images/catalog/photo-1.jpg" width="648" height="400" alt="Народные просторы">
-            <h4 class="catalog__title">неродные просторы</h4>
+          <li class="catalog__item">
+            <h4 class="catalog__title">Неродные просторы</h4>
+            <img src="./img/catalog/photo-1.jpg" width="648" height="400" alt="Народные просторы.">
             <p class="catalog__author">Автор фото: Борис</p>
-            <svg width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path opacity="0.3"
-                d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z"
-                fill="black" />
-            </svg>
             <p class="like">1350</p>
           </li>
-          <li class="catalog__item catalog__item--vegetation">
-            <img src="../images/catalog/photo-2.jpg" width="324" height="267" alt="Местная растительность">
-            <h4 class="catalog__title">местная растительность</h4>
+          <li class="catalog__item">
+            <h4 class="catalog__title">Местная растительность</h4>
+            <img src="./img/catalog/photo-2.jpg" width="324" height="267" alt="Местная растительность.">
             <p class="catalog__author">Автор фото: Сергей</p>
-            <svg width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path opacity="0.3"
-                d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z"
-                fill="black" />
-            </svg>
             <p class="like">143</p>
           </li>
-          <li class="catalog__item catalog__item--road">
-            <img src="../images/catalog/photo-3.jpg" width="324" height="267" alt="Дорога на север">
-            <h4 class="catalog__title">дорога на север</h4>
+          <li class="catalog__item">
+            <h4 class="catalog__title">Дорога на север</h4>
+            <img src="./img/catalog/photo-3.jpg" width="324" height="267" alt="Дорога на север.">
             <p class="catalog__author">Автор фото: Петр</p>
-            <svg width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path opacity="0.3"
-                d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z"
-                fill="black" />
-            </svg>
             <p class="like">96</p>
           </li>
-          <li class="catalog__item catalog__item--bridge">
-            <img src="../images/catalog/photo-4.jpg" width="324" height="267" alt="Мост дьявола">
-            <h4 class="catalog__title">мост дьявола</h4>
+          <li class="catalog__item">
+            <h4 class="catalog__title">Мост дьявола</h4>
+            <img src="./img/catalog/photo-4.jpg" width="324" height="267" alt="Мост дьявола.">
             <p class="catalog__author">Автор фото: Антон</p>
-            <svg width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path opacity="0.3"
-                d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z"
-                fill="black" />
-            </svg>
             <p class="like">254</p>
           </li>
         </ul>
@@ -108,43 +48,14 @@
     </section>
     <section class="information">
       <h2 class="visually-hidden">
-        все еще сомневаетесь?
+        Все еще сомневаетесь?
       </h2>
       <p class="causes__slogan">
         Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!
       </p>
     </section>
     <div class="video">
-      <img src="../images/catalog/video-desktop.jpg" width="648" height="500" alt="Видео">
+      <img src="./img/catalog/video-desktop.jpg" width="648" height="500" alt="Превью видео.">
     </div>
   </main>
-
-  <footer class="main-footer">
-    <div class="main-footer__wrapper">
-      <div class="main-footer__contacts contacts">
-        <b class="contacts__title">#visitSEDONA</b>
-      </div>
-      <div class="main-footer__social social">
-        <b class="social__title">Давайте дружить!</b>
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">Мы в Телеграме</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">Мы в
-              Ютубе</a>
-          </li>
-        </ul>
-      </div>
-      <div class="main-footer__copyright copyright">
-        <b class="copyright__text">Разработано:</b>
-        <a class="copyright__link visually-hidden" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-      </div>
-    </div>
-  </footer>
-</body>
-
-</html>
+{% endblock %}
