--- a/source/form.html
+++ b/source/form.html
@@ -1,139 +1,119 @@
-<!DOCTYPE html>
-<html class="page" lang="ru">
+{% set pageId = 2 %}
+{% set permalink = pages[pageId].path %}
+{% extends "./templates/_layout.twig" %}
 
-<head>
-  <meta charset="utf-8">
-  <title>HTML Academy: Седона</title>
-</head>
-
-<body class="page__body">
-  <header class="main-header">
-
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-
-      <div class="main-nav__wrapper">
-        <a class="main-header__logo">
-          <img class="main-header__logo-image" src="../images/logo.png" width="185" height="96" alt="Логотип Седона">
-        </a>
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item site-list__item--current">
-            <a>
-              Главная
-            </a>
-          </li>
-          <li class="site-list__item">
-            <a href="photo.html">
-              Фото и видео
-            </a>
-          </li>
-
-          <li class="site-list__item">
-            <a href="form.html">
-              Форма отзыва
-            </a>
-          </li>
-          <li class="site-list__item">
-            <a href="#">
-              HTML ACADEMY
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-
+{% block main %}
   <main class="main-container">
     <h1 class="visually-hidden">Отзывы</h1>
     <section class="description">
-      <div class="description__wrapper">
-        <header class="description__header">
-          <h2 class="sedona">
-            оставьте свой отзыв
-          </h2>
-          <p class="slogan">
-            Помогите нашим отелям стать лучше! оставьте отзыв о них,<br>а также о посещенных вами достопримечательностях
-          </p>
-        </header>
-        <div class="yourself">
-          <h3>Представьтесь:</h3>
-          <ol class="yourself__item">
-            <li class="yourself__list">ИМЯ*:
-              <input type="text">
-            </li>
-            <li class="yourself__list">ФАМИЛИЯ*:
-              <input type="text">
-            </li>
-            <li class="yourself__list">Отчество:
-              <input type="text">
-            </li>
-          </ol>
-
-          <h3>Контактная информация:</h3>
-          <ol class="contact-information">
-            <li class="contact-information__list">Контактный телефон*:
-              <input type="text">
-            </li>
-            <li class="contact-information__list">Электронная почта*:
-              <input type="text">
-            </li>
-          </ol>
-
-        </div>
-      </div>
-      <h3>ваше Общее впечатление:</h3>
-      <div class="impression">
-        <p class="impression__list"><input name="impression" type="radio" value="positive" checked>Скорее положительное
+      <header class="description__header">
+        <h2 class="sedona">
+          Оставьте свой отзыв
+        </h2>
+        <p class="slogan">
+          Помогите нашим отелям стать лучше! оставьте отзыв о них,<br>а также о посещенных вами достопримечательностях.
         </p>
-        <p class="impression__list"><input name="impression" type="radio" value="negative">Скорее отрицательное</p>
-        <p class="impression__list"><input name="impression" type="radio" value="neutral">Затрудняюсь ответить</p>
-      </div>
-      <h3>посещенные достопримечательности:</h3>
-      <div class="attraction">
-        <ol class="attraction__item">
-          <li class="attraction__list"><input name="attraction" type="checkbox" value="bridge" checked>Мост Дьявола</li>
-          <li class="attraction__list"><input name="attraction" type="checkbox" value="park" checked>Слайд-парк</li>
-          <li class="attraction__list"><input name="attraction" type="checkbox" value="mountain" checked>Гора-Колокол
-          </li>
-          <li class="attraction__list"><input name="attraction" type="checkbox" value="rocks">Красные скалы</li>
-        </ol>
-      </div>
+      </header>
     </section>
-    <div class="emotions">
-      <h3>Опишите свои эмоции:</h3>
-      <input type="text">
-      <button class="button"> ОТПРАВИТЬ ОТЗЫВ </button>
-      <p>* — обязательные поля</p>
-    </div>
-  </main>
-
-  <footer class="main-footer">
-    <div class="main-footer__wrapper">
-      <div class="main-footer__contacts contacts">
-        <b class="contacts__title">#visitSEDONA</b>
-      </div>
-      <div class="main-footer__social social">
-        <b class="social__title">Давайте дружить!</b>
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+    <form action="https://echo.htmlacademy.ru" method="post">
+      <div class="your-self" role="group" aria-labelledby="your-self">
+        <h3 id="your-self">Представьтесь:</h3>
+        <ul class="your-self__list">
+          <li class="your-self__item">
+            <label>
+              Имя<span aria-hidden="true">*</span>:
+              <input type="text" required>
+            </label>
           </li>
-          <li class="social__item">
-            <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">Мы в Телеграме</a>
+          <li class="your-self__item">
+            <label>
+              Фамилия<span aria-hidden="true">*</span>:
+              <input type="text" required>
+            </label>
           </li>
-          <li class="social__item">
-            <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">Мы в
-              Ютубе</a>
+          <li class="your-self__item">
+            <label>
+              Отчество:
+              <input type="text">
+            </label>
           </li>
         </ul>
       </div>
-      <div class="main-footer__copyright copyright">
-        <b class="copyright__text">Разработано:</b>
-        <a class="copyright__link visually-hidden" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+      <div class="your-contact" role="group" aria-labelledby="your-contact">
+        <h3 id="your-contact">Контактная информация:</h3>
+        <ul class="your-contact__list">
+          <li class="your-contact__item">
+            <label>
+              Контактный телефон<span aria-hidden="true">*</span>:
+              <input type="tel">
+            </label>
+          </li>
+          <li class="your-contact__item">
+            <label>
+              Электронная почта<span aria-hidden="true">*</span>:
+              <input type="email">
+            </label>
+          </li>
+        </ul>
       </div>
-    </div>
-  </footer>
-
-</body>
-
-</html>
+      <div class="impression" role="group" aria-labelledby="impression">
+        <h3 id="impression">Ваше общее впечатление:</h3>
+        <ul class="impression__list">
+          <li class="impression__item">
+            <label>
+              <input name="impression" type="radio" value="positive" checked>
+              Скорее положительное
+            </label>
+          </li>
+          <li class="impression__item">
+            <label>
+              <input name="impression" type="radio" value="negative">
+              Скорее отрицательное
+            </label>
+          </li>
+          <li class="impression__item">
+            <label>
+              <input name="impression" type="radio" value="neutral">
+              Затрудняюсь ответить
+            </label>
+          </li>
+        </ul>
+      </div>
+      <div class="attraction" role="group" aria-labelledby="attraction">
+        <h3 id="attraction">посещенные достопримечательности:</h3>
+        <ul class="attraction__list">
+          <li class="attraction__item">
+            <label>
+              <input name="attraction" type="checkbox" value="bridge" checked>
+              Мост Дьявола
+            </label>
+          </li>
+          <li class="attraction__item">
+            <label>
+              <input name="attraction" type="checkbox" value="park" checked>
+              Слайд-парк
+            </label>
+          </li>
+          <li class="attraction__item">
+            <label>
+              <input name="attraction" type="checkbox" value="mountain" checked>
+              Гора-Колокол
+            </label>
+          </li>
+          <li class="attraction__item">
+            <lable>
+              <input name="attraction" type="checkbox" value="rocks">
+              Красные скалы
+            </lable>
+          </li>
+        </ul>
+      </div>
+      <div class="emotions">
+        <label for="emotions">Опишите свои эмоции:</label>
+        <textarea id="emotions"></textarea>
+      </div>
+      <button class="button" type="submit">Отправить отзыв</button>
+      <p aria-hidden="true">* — обязательные поля</p>
+    </form>
+  </main>
+{% endblock %}
