стилизация главной страницы

--- a/source/form.html
+++ b/source/form.html
@@ -72,10 +72,10 @@
             </label>
           </li>
           <li class="impression__item">
-            <label>
+            <lable>
               <input name="impression" type="radio" value="neutral">
               Затрудняюсь ответить
-            </label>
+            </lable>
           </li>
         </ul>
       </div>
