--- a/source/index.html
+++ b/source/index.html
@@ -100,13 +100,13 @@
     </div>
   </section>
   <section class="information">
-    <h2 class="visually-hidden">
+    <h2 class="information__title">
       Заинтересовались?
     </h2>
-    <p class="slogan">
-      Укажите предполагаемые датыпоездки, и мы покажем вам лучшиепредложения гостиниц в седоне
+    <p class="information__text">
+      Укажите предполагаемые даты поездки, и мы покажем вам лучшиепредложения гостиниц в седоне
     </p>
-    <a class="button" href="#">Найти гостиницу</a>
+    <a class="information__button button" href="#">Найти гостиницу</a>
   </section>
   <div class="maps">
     <img src="./img/map-tablet.jpg" width="768" height="350" alt="Карта городка Седона">
