--- a/source/form.html
+++ b/source/form.html
@@ -7,10 +7,10 @@
     <h1 class="visually-hidden">Отзывы</h1>
     <section class="description">
       <header class="description__header">
-        <h2 class="sedona">
+        <h2 class="description__title">
           Оставьте свой отзыв
         </h2>
-        <p class="slogan">
+        <p class="description__text">
           Помогите нашим отелям стать лучше! оставьте отзыв о них,<br>а также о посещенных вами достопримечательностях.
         </p>
       </header>
