--- a/source/index.html
+++ b/source/index.html
@@ -8,10 +8,10 @@
   <section class="description">
     <div class="description__wrapper">
       <header class="description__header">
-        <h2 class="sedona">
+        <h2 class="description__title">
           Седона — небольшой городок в Аризоне, заслуживающий большего!
         </h2>
-        <p class="slogan">
+        <p class="description__text">
           Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
         </p>
       </header>
