--- a/source/form.html
+++ b/source/form.html
@@ -72,10 +72,10 @@
             </label>
           </li>
           <li class="impression__item">
-            <lable>
+            <label>
               <input name="impression" type="radio" value="neutral">
               Затрудняюсь ответить
-            </lable>
+            </label>
           </li>
         </ul>
       </div>
@@ -101,10 +101,10 @@
             </label>
           </li>
           <li class="attraction__item">
-            <lable>
+            <label>
               <input name="attraction" type="checkbox" value="rocks">
               Красные скалы
-            </lable>
+            </label>
           </li>
         </ul>
       </div>
