достилизовал все страницы

--- a/source/form.html
+++ b/source/form.html
@@ -7,7 +7,7 @@
     <h1 class="visually-hidden">Отзывы</h1>
     <section class="description">
       <header class="description__header">
-        <h2 class="description__title">
+        <h2 class="description__title--form">
           Оставьте свой отзыв
         </h2>
         <p class="description__text">
