--- a/source/form.html
+++ b/source/form.html
@@ -3,117 +3,117 @@
 {% extends "./templates/_layout.twig" %}
 
 {% block main %}
-  <main class="main-container">
-    <h1 class="visually-hidden">Отзывы</h1>
-    <section class="description">
-      <header class="description__header">
-        <h2 class="description__title--form">
-          Оставьте свой отзыв
-        </h2>
-        <p class="description__text">
-          Помогите нашим отелям стать лучше! оставьте отзыв о них,<br>а также о посещенных вами достопримечательностях.
-        </p>
-      </header>
-    </section>
-    <form action="https://echo.htmlacademy.ru" method="post">
-      <div class="your-self" role="group" aria-labelledby="your-self">
-        <h3 id="your-self">Представьтесь:</h3>
-        <ul class="your-self__list">
-          <li class="your-self__item">
-            <label>
-              Имя<span aria-hidden="true">*</span>:
-              <input type="text" required>
-            </label>
-          </li>
-          <li class="your-self__item">
-            <label>
-              Фамилия<span aria-hidden="true">*</span>:
-              <input type="text" required>
-            </label>
-          </li>
-          <li class="your-self__item">
-            <label>
-              Отчество:
-              <input type="text">
-            </label>
-          </li>
-        </ul>
-      </div>
-      <div class="your-contact" role="group" aria-labelledby="your-contact">
-        <h3 id="your-contact">Контактная информация:</h3>
-        <ul class="your-contact__list">
-          <li class="your-contact__item">
-            <label>
-              Контактный телефон<span aria-hidden="true">*</span>:
-              <input type="tel">
-            </label>
-          </li>
-          <li class="your-contact__item">
-            <label>
-              Электронная почта<span aria-hidden="true">*</span>:
-              <input type="email">
-            </label>
-          </li>
-        </ul>
-      </div>
-      <div class="impression" role="group" aria-labelledby="impression">
-        <h3 id="impression">Ваше общее впечатление:</h3>
-        <ul class="impression__list">
-          <li class="impression__item">
-            <label>
-              <input name="impression" type="radio" value="positive" checked>
-              Скорее положительное
-            </label>
-          </li>
-          <li class="impression__item">
-            <label>
-              <input name="impression" type="radio" value="negative">
-              Скорее отрицательное
-            </label>
-          </li>
-          <li class="impression__item">
-            <label>
-              <input name="impression" type="radio" value="neutral">
-              Затрудняюсь ответить
-            </label>
-          </li>
-        </ul>
-      </div>
-      <div class="attraction" role="group" aria-labelledby="attraction">
-        <h3 id="attraction">посещенные достопримечательности:</h3>
-        <ul class="attraction__list">
-          <li class="attraction__item">
-            <label>
-              <input name="attraction" type="checkbox" value="bridge" checked>
-              Мост Дьявола
-            </label>
-          </li>
-          <li class="attraction__item">
-            <label>
-              <input name="attraction" type="checkbox" value="park" checked>
-              Слайд-парк
-            </label>
-          </li>
-          <li class="attraction__item">
-            <label>
-              <input name="attraction" type="checkbox" value="mountain" checked>
-              Гора-Колокол
-            </label>
-          </li>
-          <li class="attraction__item">
-            <label>
-              <input name="attraction" type="checkbox" value="rocks">
-              Красные скалы
-            </label>
-          </li>
-        </ul>
-      </div>
-      <div class="emotions">
-        <label for="emotions">Опишите свои эмоции:</label>
-        <textarea id="emotions"></textarea>
-      </div>
-      <button class="button" type="submit">Отправить отзыв</button>
-      <p aria-hidden="true">* — обязательные поля</p>
-    </form>
-  </main>
+<main class="main-container">
+  <h1 class="visually-hidden">Отзывы</h1>
+  <section class="description">
+    <header class="description__header">
+      <h2 class="description__title--form">
+        Оставьте свой отзыв
+      </h2>
+      <p class="description__text--form">
+        Помогите нашим отелям стать лучше! оставьте отзыв о них,<br>а также о посещенных вами достопримечательностях.
+      </p>
+    </header>
+  </section>
+  <form action="https://echo.htmlacademy.ru" method="post">
+    <div class="your-self" role="group" aria-labelledby="your-self">
+      <h3 id="your-self__title">Представьтесь:</h3>
+      <ul class="your-self__list">
+        <li class="your-self__item">
+          <label>
+            Имя<span aria-hidden="true">*</span>:
+            <input type="text" required>
+          </label>
+        </li>
+        <li class="your-self__item">
+          <label>
+            Фамилия<span aria-hidden="true">*</span>:
+            <input type="text" required>
+          </label>
+        </li>
+        <li class="your-self__item">
+          <label>
+            Отчество:
+            <input type="text">
+          </label>
+        </li>
+      </ul>
+    </div>
+    <div class="your-contact" role="group" aria-labelledby="your-contact">
+      <h3 id="your-contact">Контактная информация:</h3>
+      <ul class="your-contact__list">
+        <li class="your-contact__item">
+          <label>
+            Контактный телефон<span aria-hidden="true">*</span>:
+            <input type="tel">
+          </label>
+        </li>
+        <li class="your-contact__item">
+          <label>
+            Электронная почта<span aria-hidden="true">*</span>:
+            <input type="email">
+          </label>
+        </li>
+      </ul>
+    </div>
+    <div class="impression" role="group" aria-labelledby="impression">
+      <h3 id="impression">Ваше общее впечатление:</h3>
+      <ul class="impression__list">
+        <li class="impression__item">
+          <label>
+            <input name="impression" type="radio" value="positive" checked>
+            Скорее положительное
+          </label>
+        </li>
+        <li class="impression__item">
+          <label>
+            <input name="impression" type="radio" value="negative">
+            Скорее отрицательное
+          </label>
+        </li>
+        <li class="impression__item">
+          <label>
+            <input name="impression" type="radio" value="neutral">
+            Затрудняюсь ответить
+          </label>
+        </li>
+      </ul>
+    </div>
+    <div class="attraction" role="group" aria-labelledby="attraction">
+      <h3 id="attraction">посещенные достопримечательности:</h3>
+      <ul class="attraction__list">
+        <li class="attraction__item">
+          <label>
+            <input name="attraction" type="checkbox" value="bridge" checked>
+            Мост Дьявола
+          </label>
+        </li>
+        <li class="attraction__item">
+          <label>
+            <input name="attraction" type="checkbox" value="park" checked>
+            Слайд-парк
+          </label>
+        </li>
+        <li class="attraction__item">
+          <label>
+            <input name="attraction" type="checkbox" value="mountain" checked>
+            Гора-Колокол
+          </label>
+        </li>
+        <li class="attraction__item">
+          <label>
+            <input name="attraction" type="checkbox" value="rocks">
+            Красные скалы
+          </label>
+        </li>
+      </ul>
+    </div>
+    <div class="emotions">
+      <label for="emotions">Опишите свои эмоции:</label>
+      <textarea id="emotions"></textarea>
+    </div>
+    <button class="button" type="submit">Отправить отзыв</button>
+    <p aria-hidden="true">* — обязательные поля</p>
+  </form>
+</main>
 {% endblock %}
