готовая вторая страница

--- a/source/form.html
+++ b/source/form.html
@@ -40,7 +40,7 @@
       </ul>
     </div>
     <div class="your-contact" role="group" aria-labelledby="your-contact">
-      <h3 id="your-contact">Контактная информация:</h3>
+      <h3 id="your-contact__title">Контактная информация:</h3>
       <ul class="your-contact__list">
         <li class="your-contact__item">
           <label>
@@ -57,23 +57,23 @@
       </ul>
     </div>
     <div class="impression" role="group" aria-labelledby="impression">
-      <h3 id="impression">Ваше общее впечатление:</h3>
+      <h3 id="impression__title">Ваше общее впечатление:</h3>
       <ul class="impression__list">
         <li class="impression__item">
           <label>
-            <input name="impression" type="radio" value="positive" checked>
+            <input name="impression__different" type="radio" value="positive" checked>
             Скорее положительное
           </label>
         </li>
         <li class="impression__item">
           <label>
-            <input name="impression" type="radio" value="negative">
+            <input name="impression__different" type="radio" value="negative">
             Скорее отрицательное
           </label>
         </li>
         <li class="impression__item">
           <label>
-            <input name="impression" type="radio" value="neutral">
+            <input name="impression__different" type="radio" value="neutral">
             Затрудняюсь ответить
           </label>
         </li>
