закончил вторую страницу

--- a/source/form.html
+++ b/source/form.html
@@ -80,36 +80,36 @@
       </ul>
     </div>
     <div class="attraction" role="group" aria-labelledby="attraction">
-      <h3 id="attraction">посещенные достопримечательности:</h3>
+      <h3 id="attraction__ешеду">посещенные достопримечательности:</h3>
       <ul class="attraction__list">
         <li class="attraction__item">
           <label>
-            <input name="attraction" type="checkbox" value="bridge" checked>
+            <input name="attraction__text" type="checkbox" value="bridge" checked>
             Мост Дьявола
           </label>
         </li>
         <li class="attraction__item">
           <label>
-            <input name="attraction" type="checkbox" value="park" checked>
+            <input name="attraction__text" type="checkbox" value="park" checked>
             Слайд-парк
           </label>
         </li>
         <li class="attraction__item">
           <label>
-            <input name="attraction" type="checkbox" value="mountain" checked>
+            <input name="attraction__text" type="checkbox" value="mountain" checked>
             Гора-Колокол
           </label>
         </li>
         <li class="attraction__item">
           <label>
-            <input name="attraction" type="checkbox" value="rocks">
+            <input name="attraction__text" type="checkbox" value="rocks">
             Красные скалы
           </label>
         </li>
       </ul>
     </div>
     <div class="emotions">
-      <label for="emotions">Опишите свои эмоции:</label>
+      <label for="emotions__title">Опишите свои эмоции:</label>
       <textarea id="emotions"></textarea>
     </div>
     <button class="button" type="submit">Отправить отзыв</button>
