готовая страница каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -7,10 +7,10 @@
     <h1 class="visually-hidden">фото и видео</h1>
     <section class="description">
       <header class="description__header">
-        <h2 class="sedona">
+        <h2 class="description__title--catalog">
           фото и видео
         </h2>
-        <p class="causes__slogan">
+        <p class="description__text--catalog">
           Не можете решиться на путешествие из-за курса? <br> Фотографии помогут вам забыть о политике и экономике.
         </p>
       </header>
@@ -23,30 +23,30 @@
             <h4 class="catalog__title">Неродные просторы</h4>
             <img src="./img/catalog/photo-1.jpg" width="648" height="400" alt="Народные просторы.">
             <p class="catalog__author">Автор фото: Борис</p>
-            <p class="like">1350</p>
+            <p class="catalog__like">1350</p>
           </li>
           <li class="catalog__item">
             <h4 class="catalog__title">Местная растительность</h4>
             <img src="./img/catalog/photo-2.jpg" width="324" height="267" alt="Местная растительность.">
             <p class="catalog__author">Автор фото: Сергей</p>
-            <p class="like">143</p>
+            <p class="catalog__like">143</p>
           </li>
           <li class="catalog__item">
             <h4 class="catalog__title">Дорога на север</h4>
             <img src="./img/catalog/photo-3.jpg" width="324" height="267" alt="Дорога на север.">
             <p class="catalog__author">Автор фото: Петр</p>
-            <p class="like">96</p>
+            <p class="catalog__like">96</p>
           </li>
           <li class="catalog__item">
             <h4 class="catalog__title">Мост дьявола</h4>
             <img src="./img/catalog/photo-4.jpg" width="324" height="267" alt="Мост дьявола.">
             <p class="catalog__author">Автор фото: Антон</p>
-            <p class="like">254</p>
+            <p class="catalog__like">254</p>
           </li>
         </ul>
       </div>
     </section>
-    <section class="information">
+    <section class="information--catalog">
       <h2 class="visually-hidden">
         Все еще сомневаетесь?
       </h2>
