--- a/source/form.html
+++ b/source/form.html
@@ -17,7 +17,7 @@
   </section>
   <form action="https://echo.htmlacademy.ru" method="post">
     <div class="your-self" role="group" aria-labelledby="your-self">
-      <h3 id="your-self__title">Представьтесь:</h3>
+      <h3 id="your-self">Представьтесь:</h3>
       <ul class="your-self__list">
         <li class="your-self__item">
           <label>
@@ -40,7 +40,7 @@
       </ul>
     </div>
     <div class="your-contact" role="group" aria-labelledby="your-contact">
-      <h3 id="your-contact__title">Контактная информация:</h3>
+      <h3 id="your-contact">Контактная информация:</h3>
       <ul class="your-contact__list">
         <li class="your-contact__item">
           <label>
@@ -57,7 +57,7 @@
       </ul>
     </div>
     <div class="impression" role="group" aria-labelledby="impression">
-      <h3 id="impression__title">Ваше общее впечатление:</h3>
+      <h3 id="impression">Ваше общее впечатление:</h3>
       <ul class="impression__list">
         <li class="impression__item">
           <label>
@@ -80,7 +80,7 @@
       </ul>
     </div>
     <div class="attraction" role="group" aria-labelledby="attraction">
-      <h3 id="attraction__ешеду">посещенные достопримечательности:</h3>
+      <h3 id="attraction">посещенные достопримечательности:</h3>
       <ul class="attraction__list">
         <li class="attraction__item">
           <label>
@@ -109,7 +109,7 @@
       </ul>
     </div>
     <div class="emotions">
-      <label for="emotions__title">Опишите свои эмоции:</label>
+      <label for="emotions">Опишите свои эмоции:</label>
       <textarea id="emotions"></textarea>
     </div>
     <button class="button" type="submit">Отправить отзыв</button>
