--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,7 @@
 {% block main %}
 <main class="main-container">
   <h1 class="visually-hidden">Седона</h1>
+  <img src="./img/sedona.jpg" height="512" width="1200" alt="гланая фотография Седоны">
   <section class="description">
     <div class="description__wrapper">
       <header class="description__header">
