--- a/source/index.html
+++ b/source/index.html
@@ -27,36 +27,23 @@
           <div class="advantages">
             <ul class="advantages__list">
               <li class="advantages__item advantages__item--housing">
-                <svg width="75" height="72" viewBox="0 0 75 72" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M29.62 64.94h16.06V41.17H29.62v23.77zm13.15-2.89H32.53v-18h10.14v18h.1z" fill="#81B3D2" />
-                  <path
-                    d="M72.9 39.18L75 37.1l-9.94-9.84V.4H51.2v13.12L37.45 0 0 37.2l2.1 2.08 7.84-7.76v37.6H6.02V72h64.16v-2.88h-5.12v-37.7l7.83 7.76zM54.11 3.38h7.93v20.98l-7.93-7.85V3.38zm8.03 65.64h-49.2V28.54l24.5-24.36 24.6 24.36v40.48h.1z"
-                    fill="#81B3D2" />
-                  <path
-                    d="M29.92 27.05a7.78 7.78 0 0015.56 0 7.72 7.72 0 00-7.83-7.66 7.63 7.63 0 00-7.73 7.66zm7.73-4.97a5.01 5.01 0 015.02 4.97 5.01 5.01 0 01-10.04 0c0-2.69 2.31-4.97 5.02-4.97zM19.98 41.17h-3.01v3.88h3.01v-3.88zM25.9 41.17h-3v3.88h3v-3.88zM19.98 47.14h-3.01v3.88h3.01v-3.88zM25.9 47.14h-3v3.88h3v-3.88zM52 41.17h-3v3.88h3v-3.88zM58.03 41.17h-3.01v3.88h3.01v-3.88zM52 47.14h-3v3.88h3v-3.88zM58.03 47.14h-3.01v3.88h3.01v-3.88z"
-                    fill="#81B3D2" />
-                </svg>
+                <a class="advantages__logo advantages__logo--housing">
+                  <img src="/source/icons/house.svg" width="75" height="72" alt="логотип дома">
+                </a>
                 <h3 class="advantages__title">Жилье</h3>
                 <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
               </li>
               <li class="advantages__item advantages__item--food">
-                <svg width="76" height="68" viewBox="0 0 76 68" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M71.71 45.33H4.3A4.3 4.3 0 000 49.57v3.45c0 2.27 1.9 4.14 4.29 4.14h1v.98a9.84 9.84 0 009.87 9.76h45.68a9.84 9.84 0 009.87-9.76v-.98h1A4.3 4.3 0 0076 52.92v-3.45c0-2.17-1.9-4.14-4.29-4.14zm-3.89 12.81c0 3.75-3.09 6.8-6.88 6.8H15.06a6.85 6.85 0 01-6.88-6.8v-.98h59.64v.98zm5.19-5.22c0 .7-.6 1.28-1.3 1.28H4.3c-.7 0-1.3-.59-1.3-1.28v-3.45c0-.59.6-1.18 1.3-1.18H71.8c.7 0 1.3.59 1.3 1.28v3.35H73zM16.16 37.35l5.38 3.94 5.49-3.94 5.48 3.94L38 37.35l5.39 3.94 5.48-3.94 5.49 3.94 5.48-3.94 5.49 3.94 6.28-4.63-1.7-2.37-4.58 3.26-5.49-3.95-5.48 3.95-5.49-3.95-5.48 3.95L38 33.6l-5.49 3.95-5.48-3.95-5.49 3.95-5.38-3.95-5.49 3.95-4.59-3.26-1.8 2.37 6.4 4.63 5.48-3.94zM70.71 30.65c0-.6.1-2.56 0-2.96C70.01 12.32 55.65 0 38 0S5.88 12.32 5.19 27.7v2.95H70.7zM38 2.95C53.96 2.96 67.12 14 67.72 27.7H8.18C8.88 14 22.04 2.96 38 2.96z"
-                    fill="#81B3D2" />
-                  <path
-                    d="M38 16.75c1.1 0 2-.88 2-1.97 0-1.09-.9-1.97-2-1.97s-2 .88-2 1.97c0 1.1.9 1.97 2 1.97zM30.02 11.92c1.1 0 2-.88 2-1.97 0-1.09-.9-1.97-2-1.97s-2 .88-2 1.97c0 1.1.9 1.97 2 1.97zM45.98 11.92c1.1 0 2-.88 2-1.97 0-1.09-.9-1.97-2-1.97s-2 .88-2 1.97c0 1.1.9 1.97 2 1.97z"
-                    fill="#81B3D2" />
-                </svg>
+                <a class="advantages__logo advantages__logo--food">
+                  <img src="/source/icons/burger.svg" width="76" height="68" alt="логотип бургера">
+                </a>
                 <h3 class="advantages__title">Еда</h3>
                 <p class="advantages__description">Всегда заказывайте фирменный бургер,вы не разочаруетесь!</p>
               </li>
               <li class="advantages__item advantages__item--souvenirs">
-                <svg width="64" height="75" viewBox="0 0 64 75" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M61.16 22.12h-24.8c13.82-6.8 14.94-11.1 14.43-13.5-1.11-3.9-5.69-6.9-9.95-5.3-5.59 2.1-7.11 10.3-8.64 16.2-1.93-6-3.76-13.6-8.12-17.5a7.47 7.47 0 00-5.8-2c-4.06.4-9.85 5.3-7.41 10.8 2.23 5.3 9.65 8.7 14.63 11.4H2.84A2.82 2.82 0 000 25.02v11.2c0 1.6 1.32 2.8 2.84 2.8h.3V75h57.91V39.01h.1c1.63 0 2.85-1.3 2.85-2.8v-11.2a2.9 2.9 0 00-2.84-2.9zm-18.7-16.3c2.14-.3 4.98 1.3 5.29 3.2.4 2.7-3.36 5.2-5.08 6.3-2.54 1.7-4.98 2.6-7.32 4 .82-3.7 2.54-12.9 7.11-13.5zm-22.96 9.8c-2.23-1.5-6.5-4.4-6.4-7.7.1-3.6 5.8-6.5 8.84-3.8 3.86 3.3 5.7 11 7.11 16.4-3.25-1.6-6.3-2.8-9.55-4.9zm6 56.38H6.1V39.01h19.4v33zm0-35.99H3.05v-10.9H25.5v10.9zm10.16 36h-7.22V25.1h7.22v46.9zM58 72H38.7V39h19.4v33H58zm2.94-36H38.7v-10.9h22.25v10.9z"
-                    fill="#81B3D2" />
-                </svg>
+                <a class="advantages__logo advantages__logo--souvenirs">
+                  <img src="/source/icons/gift.svg" width="64" height="75" alt="логотип сувенира">
+                </a>
                 <h3 class="advantages__title">Сувениры</h3>
                 <p class="advantages__description">Не только китайского, но и местного производства!</p>
               </li>
