--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,7 @@
 {% extends "./templates/_layout.twig" %}
 
 {% block main %}
-<main class="main-container">
+<main class="main-container main-index">
   <h1 class="visually-hidden">Седона</h1>
   <section class="description">
     <div class="description__wrapper">
@@ -23,7 +23,7 @@
           <p class="benefits__description">
             Седона не атракцион для туристов, там течет своя жизнь
           </p>
-          <img src="./img/photo-city.jpg" width="512" height="256" alt="Фотография седоны">
+          <img class="photo-sedona" src="./img/photo-city.jpg" width="512" height="256" alt="Фотография седоны">
           <div class="advantages">
             <ul class="advantages__list">
               <li class="advantages__item advantages__item--housing">
@@ -57,7 +57,7 @@
           <p class="benefits__description">
             Да, по нему можно пройти! Если вы осмелитесь, конечно
           </p>
-          <img src="./img/photo-bridge.jpg" width="512" height="256" alt="Фотография моста">
+          <img class="photo-sedona" src="./img/photo-bridge.jpg" width="512" height="256" alt="Фотография моста">
         </li>
         <li class="benefits__item">
           <h3 class="benefits__number">
