--- a/source/index.html
+++ b/source/index.html
@@ -17,33 +17,26 @@
       </header>
       <ol class="benefits">
         <li class="benefits__item">
-          <h3 class="benefits__number">
-            Настоящий городок
-          </h3>
-          <p class="benefits__description">
-            Седона не атракцион для туристов, там течет своя жизнь
-          </p>
+          <div class="real-hous">
+            <h3 class="benefits__number">
+              Настоящий городок
+            </h3>
+            <p class="benefits__description">
+              Седона не атракцион для туристов, там течет своя жизнь
+            </p>
+          </div>
           <img class="photo-sedona" src="./img/photo-city.jpg" width="512" height="256" alt="Фотография седоны">
           <div class="advantages">
             <ul class="advantages__list">
               <li class="advantages__item advantages__item--housing">
-                <a class="advantages__logo advantages__logo--housing">
-                  <img src="/source/icons/house.svg" width="75" height="72" alt="логотип дома">
-                </a>
                 <h3 class="advantages__title">Жилье</h3>
                 <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
               </li>
               <li class="advantages__item advantages__item--food">
-                <a class="advantages__logo advantages__logo--food">
-                  <img src="/source/icons/burger.svg" width="76" height="68" alt="логотип бургера">
-                </a>
                 <h3 class="advantages__title">Еда</h3>
                 <p class="advantages__description">Всегда заказывайте фирменный бургер,вы не разочаруетесь!</p>
               </li>
               <li class="advantages__item advantages__item--souvenirs">
-                <a class="advantages__logo advantages__logo--souvenirs">
-                  <img src="/source/icons/gift.svg" width="64" height="75" alt="логотип сувенира">
-                </a>
                 <h3 class="advantages__title">Сувениры</h3>
                 <p class="advantages__description">Не только китайского, но и местного производства!</p>
               </li>
