страница каталога почти готова

--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
         </p>
       </header>
       <ol class="benefits">
-        <li class="benefits__item">
+        <li class="benefits__item benefits__item--illustrated">
           <div class="real-hous">
             <h3 class="benefits__number">
               Настоящий городок
@@ -43,13 +43,15 @@
             </ul>
           </div>
         </li>
-        <li class="benefits__item">
-          <h3 class="benefits__number">
-            Там есть мост дьявола
-          </h3>
-          <p class="benefits__description">
-            Да, по нему можно пройти! Если вы осмелитесь, конечно
-          </p>
+        <li class="benefits__item benefits__item--illustrated">
+          <div class="real-hous">
+            <h3 class="benefits__number">
+              Там есть мост дьявола
+            </h3>
+            <p class="benefits__description">
+              Да, по нему можно пройти! Если вы осмелитесь, конечно
+            </p>
+          </div>
           <img class="photo-sedona" src="./img/photo-bridge.jpg" width="512" height="256" alt="Фотография моста">
         </li>
         <li class="benefits__item">
