--- a/source/form.html
+++ b/source/form.html
@@ -5,19 +5,19 @@
 {% block main %}
 <main class="main-container">
   <h1 class="visually-hidden">Отзывы</h1>
-  <section class="description">
-    <header class="description__header">
+  <section class="description--form">
+    <header class="description__header--form">
       <h2 class="description__title--form">
         Оставьте свой отзыв
       </h2>
       <p class="description__text--form">
-        Помогите нашим отелям стать лучше! оставьте отзыв о них,<br>а также о посещенных вами достопримечательностях.
+        Помогите нашим отелям стать лучше!<br> оставьте отзыв о<br> них, а также о посещенных вами<br> достопримечательностях
       </p>
     </header>
   </section>
   <form action="https://echo.htmlacademy.ru" method="post">
     <div class="your-self" role="group" aria-labelledby="your-self">
-      <h3 id="your-self">Представьтесь:</h3>
+      <h3 id="your-self__title">Представьтесь:</h3>
       <ul class="your-self__list">
         <li class="your-self__item">
           <label>
