почти доделал страницу 3

--- a/source/form.html
+++ b/source/form.html
@@ -17,47 +17,47 @@
   </section>
   <form action="https://echo.htmlacademy.ru" method="post">
     <div class="your-self" role="group" aria-labelledby="your-self">
-      <h3 id="your-self__title">Представьтесь:</h3>
+      <h3 class="your-self__title" id="your-self">Представьтесь:</h3>
       <ul class="your-self__list">
         <li class="your-self__item">
           <label>
             Имя<span aria-hidden="true">*</span>:
-            <input type="text" required>
+            <input type="text" placeholder="Пётр" required>
           </label>
         </li>
         <li class="your-self__item">
           <label>
             Фамилия<span aria-hidden="true">*</span>:
-            <input type="text" required>
+            <input type="text" placeholder="Пустота" required>
           </label>
         </li>
         <li class="your-self__item">
           <label>
             Отчество:
-            <input type="text">
+            <input type="text" placeholder="Викторович">
           </label>
         </li>
       </ul>
     </div>
     <div class="your-contact" role="group" aria-labelledby="your-contact">
-      <h3 id="your-contact">Контактная информация:</h3>
+      <h3 class="your-contact__title" id="your-contact">Контактная информация:</h3>
       <ul class="your-contact__list">
         <li class="your-contact__item">
           <label>
             Контактный телефон<span aria-hidden="true">*</span>:
-            <input type="tel">
+            <input type="tel" placeholder="Введите телефон" required>
           </label>
         </li>
         <li class="your-contact__item">
           <label>
             Электронная почта<span aria-hidden="true">*</span>:
-            <input type="email">
+            <input type="email" placeholder="Введите e-mail" required>
           </label>
         </li>
       </ul>
     </div>
     <div class="impression" role="group" aria-labelledby="impression">
-      <h3 id="impression">Ваше общее впечатление:</h3>
+      <h3 class="impression__title" id="impression">Ваше общее впечатление:</h3>
       <ul class="impression__list">
         <li class="impression__item">
           <label>
@@ -80,7 +80,7 @@
       </ul>
     </div>
     <div class="attraction" role="group" aria-labelledby="attraction">
-      <h3 id="attraction">посещенные достопримечательности:</h3>
+      <h3 class="attraction__title" id="attraction">посещенные достопримечательности:</h3>
       <ul class="attraction__list">
         <li class="attraction__item">
           <label>
