--- a/source/index.html
+++ b/source/index.html
@@ -88,7 +88,9 @@
     <p class="information__text">
       Укажите предполагаемые даты поездки, и мы покажем вам лучшиепредложения гостиниц в седоне
     </p>
-    <a class="information__button button" href="#">Найти гостиницу</a>
+    <div class="button__index">
+      <a class="button button--index" href="#" >Найти гостиницу</a>
+    </div>
   </section>
   <div class="maps">
     <img src="./img/map-tablet.jpg" width="768" height="350" alt="Карта городка Седона">
