--- a/source/index.html
+++ b/source/index.html
@@ -59,7 +59,7 @@
             Небольшая площадь
           </h3>
           <p class="benefits__description">
-            Все интересные места находятся очень близкоЬ
+            Все интересные места находятся очень близко
           </p>
         </li>
         <li class="benefits__item">
@@ -86,7 +86,7 @@
       Заинтересовались?
     </h2>
     <p class="information__text">
-      Укажите предполагаемые даты поездки, и мы покажем вам лучшиепредложения гостиниц в седоне
+      Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне
     </p>
     <div class="button__index">
       <a class="button button--index" href="#" >Найти гостиницу</a>
