--- a/source/index.html
+++ b/source/index.html
@@ -93,7 +93,7 @@
     </div>
   </section>
   <div class="maps">
-    <img src="./img/map-tablet.jpg" width="1200" height="350" alt="Карта городка Седона">
+    <img src="./img/map-mobile.jpg" width="320" height="350" alt="Карта городка Седона">
   </div>
 </main>
 {% endblock %}
