--- a/source/index.html
+++ b/source/index.html
@@ -89,11 +89,16 @@
       Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне
     </p>
     <div class="button__index">
-      <a class="button button--index" href="#" >Найти гостиницу</a>
+      <a class="button button--index" href="#">Найти гостиницу</a>
     </div>
   </section>
   <div class="maps">
-    <img src="./img/map-mobile.jpg" width="320" height="350" alt="Карта городка Седона">
+    <picture>
+      <source media="(--desktop)" srcset="./img/map-desktop.jpg 1x, ./img/map-desktop2x.jpg 2x">
+      <source media="(--tablet)" srcset="./img/map-tablet.jpg 1x, ./img/map-tablet2x.jpg 2x">
+      <img class="maps__image" src="./img/map-mobile.jpg" srcset="./img/map-mobile2x.jpg"
+        alt="Карта городка Седона">
+    </picture>
   </div>
 </main>
 {% endblock %}
